z-index fix

--- a/less/hotgraphic.less
+++ b/less/hotgraphic.less
@@ -31,7 +31,7 @@
     height: auto;
     margin: 40px;
     background-color: @background-color;
-    z-index: 500;
+    z-index: 5;
   }
 
   .hotgraphic-popup-toolbar {
